--- a/appspec.yml
+++ b/appspec.yml
@@ -8,7 +8,7 @@ hooks:
     - location: scripts/application_stop.sh
       timeout: 300
       runas: ec2-user
-  Before_install:
+  BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
       runas: ec2-user
